--- a/Strings/strings/AppResources.id.resx
+++ b/Strings/strings/AppResources.id.resx
@@ -119,19 +119,19 @@
   </resheader>
   <data name="LoginSubscriptionPage.ProCarouselTitle1" xml:space="preserve">
     <value>ACCESS TO OUR ENTIRE FLEET</value>
-    <comment>ACCESS TO OUR ENTIRE FLEET</comment>
+    <comment>AKSES KE SELURUH PESAWAT</comment>
   </data>
   <data name="LoginSubscriptionPage.ProCarouselText1" xml:space="preserve">
     <value>Dozens of aircraft, hundreds of liveries, realistic flight models, and animated cockpits</value>
-    <comment>Dozens of aircraft, hundreds of liveries, realistic flight models, and animated cockpits</comment>
+    <comment>Puluhan pesawat, ratusan desain livery, model penerbangan realistis, dan kokpit animasi</comment>
   </data>
   <data name="LoginSubscriptionPage.ProCarouselTitle2" xml:space="preserve">
     <value>DISCOVER THE WORLD</value>
-    <comment>DISCOVER THE WORLD</comment>
+    <comment>JELAJAHI DUNIA</comment>
   </data>
   <data name="LoginSubscriptionPage.ProCarouselText2" xml:space="preserve">
     <value>Over 20,000 airports worldwide, 400+ 3D airports and counting, 15m/px satellite terrain imagery, and more.</value>
-    <comment>Over 20,000 airports worldwide, 90+ 3D airports and counting, 15m/px satelite terrain imagery, and more.</comment>
+    <comment>Lebih dari 20.000 bandara di seluruh dunia, lebih dari 90 bandara 3D dan terus bertambah, citra satelit dengan resolusi 15 meter per piksel, dan masih banyak lagi.Lebih dari 20.000 bandara di seluruh dunia, lebih dari 90 bandara 3D dan terus bertambah, citra satelit dengan resolusi 15 meter per piksel, dan masih banyak lagi.</comment>
   </data>
   <data name="LoginSubscriptionPage.ProCarouselText3" xml:space="preserve">
     <value>Fly with friends! Join thousands of other pilots for an immersive, global, multiplayer experience.</value>
